<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

<RelativeLayout
    android:background="@color/app_back_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>
    <TextView
        android:fontFamily="@font/mon_semibold"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:textSize="@dimen/_15ssp"
        android:textColor="@color/white"
        android:layout_below="@id/logo"
        android:text="@string/select_portal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <ImageView
        android:scaleType="centerCrop"
        android:layout_centerInParent="true"
        android:src="@drawable/back_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ImageView>

    <LinearLayout
        android:id="@+id/ll"
        android:gravity="center"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp">

        <ImageView
            android:id="@+id/imgDiamond"
            android:scaleType="center"
            android:layout_weight="1"
            android:src="@drawable/diamond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>

        <ImageView
            android:id="@+id/imgJewellery"
            android:scaleType="center"
            android:layout_weight="1"
            android:src="@drawable/ring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/ll"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvDiamond"
            android:fontFamily="@font/mon_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/diamond"
            android:scaleType="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></TextView>

        <TextView
            android:id="@+id/tvJewellery"
            android:fontFamily="@font/mon_medium"
            android:textColor="@color/white"
            android:gravity="center"
            android:text="@string/jewellery"
            android:scaleType="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"></TextView>

    </LinearLayout>
</RelativeLayout>
</layout>